# biotoolsLLMAnnotate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONFIG.md  EDAM.owl  README.md  config.yaml  myconfig.yaml  mypy.ini  pyproject.toml  ruff.toml  sitecustomize.py  test_output.json
.github/workflows/: tests.yml
.specify/templates/: plan-template.md
codexspecs/001-create-a-python/: plan.md  quickstart.md  spec.md  tasks.md
codexspecs/001-create-a-python/contracts/: cli.md
debug_run/: candidates.json
docs/: architecture.html  architecture.md
examples/: payload_example.json  report_example.jsonl
openspec/: project.md
openspec/changes/document-cli-pipeline/: tasks.md
openspec/specs/cli-pipeline/: spec.md
scripts/: analyze_ollama_log.py  install_ollama_model.sh  install_pub2tools.sh
specs/001-create-a-python/: data-model.md  quickstart.md  research.md  tasks.md
specs/001-create-a-python/contracts/: cli.md
src/biotoolsllmannotate/: __init__.py  __main__.py  config.py  metrics.py  registry.py  validation.py  version.py
src/biotoolsllmannotate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/biotoolsllmannotate/assess/: ollama_client.py  scorer.py
src/biotoolsllmannotate/cli/: main.py  run.py
src/biotoolsllmannotate/enrich/: __init__.py  europe_pmc.py  (+2 more)
test_europepmc/: db.db  pub.txt  step.txt
tests/contract/: test_cli_config_integration.py  test_cli_help.py  test_cli_run_basic.py  test_cli_run_thresholds.py
tests/fixtures/: payload_minimal.json
tests/integration/: test_end_to_end.py
tests/perf/: test_batch_processing.py
tests/unit/: test_assess_llm.py  test_cli_load_candidates.py  test_cli_main.py  test_cli_report_csv.py  test_dedup.py  test_enrich_europe_pmc.py  test_enrich_scrape.py  test_enrich_scrape_errors.py  test_enrich_timeout.py  test_enrich_utils.py  test_ingest_pub2tools.py  test_ollama_client.py  test_pub2tools_client.py  test_pub2tools_client_select_pub.py  test_registry.py  test_schema_invalid.py  test_schema_models.py
(+19 files in other folders)
