[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biotoolsllmannotate"
version = "0.8.1"
description = "CLI to fetch Pub2Tools candidates, LLM-assess, improve, and emit bio.tools-ready annotations"
readme = "AGENTS.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
dependencies = [
  "typer[all]>=0.12",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "pydantic>=2.7",
  "pydantic-core>=2.18",
  "tenacity>=8.3",
  "orjson>=3.9",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-httpx>=0.30",
  "pytest-benchmark>=4",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[project.scripts]
biotools-annotate = "biotoolsllmannotate.cli.main:main"
