[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biotoolsllmannotate"
description = "CLI to fetch Pub2Tools candidates, LLM-assess, improve, and emit bio.tools-ready annotations"
readme = "AGENTS.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
dynamic = ["version"]
dependencies = [
  "typer[all]>=0.12",
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "pydantic[email]>=2.7",
  "tenacity>=8.3",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-httpx>=0.30",
  "pytest-benchmark>=4",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.setuptools.dynamic]
version = {attr = "biotoolsllmannotate.version.__version__"}

[project.scripts]
biotools-annotate = "biotoolsllmannotate.cli.main:main"
